# main-project-tidytech

./: .gitignore  CMakeLists.txt  PDD.md  README.md
app/: CMakeLists.txt  db_test.cpp  demo1.cpp  demo2.cpp  input.txt  main.cpp  output.txt
dependencies/: dependencies.cmake  get_cpm.cmake
docs/: README.md
docs/contributions/: Sprint0_Contribution_AaronSquire.md  Sprint0_Contribution_CarolineGuza.md  Sprint0_Contribution_SophieZhao.md  Sprint0_Contribution_WinAung.md  Sprint1_Contribution_AaronSquire.md  Sprint1_Contribution_SophieZhao.md  Sprint1_Contribution_WinAung.md  Sprint1_Contributions_CarolineGuza.md  Sprint2_Contribution_AaronSquire  Sprint2_Contribution_CarolineGuza.md  Sprint2_Contribution_SophieZhao.md  Sprint2_Contribution_WinAung.md  Sprint3_Contribution_AaronSquire.md  Sprint3_Contribution_CarolineGuza.md  Sprint3_Contribution_SophieZhao.md  Sprint3_Contribution_WinAung.md  Sprint4_Contribution_SophieZhao.md  Sprint4_Contribution_WinAung.md  Sprint4_Contributions_AaronSquire.md  Sprint4_Contributions_CarolineGuza.md  Sprint5_Contribution_AaronSquire.md  Sprint5_Contribution_CarolineGuza.md  Sprint5_Contribution_SophieZhao.md  Sprint5_Contribution_WinAung.md
docs/design/: DESIGN.md
docs/design/activity_diagram/: activity_diagram1.puml  activity_diagrams.md
docs/design/architecture/: ARCHITECTURE.md
docs/design/seq_diagrams/: SEQUENCE.md  building_manager_1.puml  building_manager_2.puml  building_operator.puml  field_engineer.puml  senior_manager.puml
docs/design/ui_wireframes/: user_interface.md
docs/design/uml_class_diagrams/: CLASSES.md  Class_Diagrams.puml  Database.puml  ManagementSystem.puml  SimulationEngine.puml  Users.puml
docs/design/use_case_diagram/: use_case_diagram.puml  use_cases.md
docs/notes/: REQUIREMENTS.md  STAFFING.md
docs/seq_diagrams/: SEQUENCE.md  building_operator.puml  field_engineer.puml
docs/uml_class_diagrams/: Class_Diagrams.puml
docs/user_guide/: USER_GUIDE.md
include/database/: database.hpp  database_adapter.hpp  db_manager.hpp  error_adapter.hpp  floor_adapter.hpp  mongo_db_adapter.hpp  robot_adapter.hpp  task_adapter.hpp
include/pubsub/: publisher.hpp  subscriber.hpp
include/simulation/: floor.hpp  floorplan.hpp  robot.hpp  simulator.hpp
include/sys_manager/: fleet_manager.hpp
include/types/: types.hpp
include/ui/: add_floor_window.hpp  add_robot_window.hpp  add_task_window.hpp  building_operator.hpp  field_engineer.hpp  login_page.hpp  main_frame.hpp  senior_manager_page.hpp  user_interface.hpp
src/: add_floor_window.cpp  add_robot_window.cpp  add_task_window.cpp  building_operator.cpp  database.cpp  db_manager.cpp  error_adapter.cpp  field_engineer.cpp  fleet_manager.cpp  floor.cpp  floor_adapter.cpp  floorplan.cpp  login_page.cpp  main_frame.cpp  mongo.cpp  robot.cpp  robot_adapter.cpp  senior_manager_page.cpp  simulator.cpp  task_adapter.cpp  user_interface.cpp
tests/: CMakeLists.txt  test_mongodb.cpp  test_simulation.cpp
